packages/runtime/src/scr_runtime.h


void scr_init(void);
void scr_runtime_abi_v1(void);
typedef struct ScrStr ScrStr;     
typedef struct ScrBytes ScrBytes;
void scr_library_register_reset(void (*fn)(void));
typedef struct ScrStr {
  size_t rc;
  size_t len;
  size_t cap;
  char data[];
} ScrStr;
ScrStr *scr_str_new(const char *bytes, size_t len); 
static inline ScrStr *scr_str_retain(ScrStr *s) {
  if (s->rc != SIZE_MAX) s->rc++;
  return s;
}
void scr_str_release(ScrStr *s); 
bool scr_str_eq(ScrStr *a, ScrStr *b);
struct ScrDyn; 
void scr_domex_install_cause_drop(void (*fn)(void *obj));
typedef struct ScrClosure {
  size_t rc; 
  void *fn;
  size_t ncaps;
  ScrBox *props;
  ScrBox *caps[];
} ScrClosure;
void scr_loop_set_ffi(bool (*pending)(void), bool (*dispatch)(void),
                      int (*pollfd)(void), void (*stop)(void));
typedef struct ScrDyn ScrDyn; 
typedef struct ScrBytes ScrBytes; 
typedef struct ScrDyn ScrDyn; 
typedef struct ScrPromise ScrPromise; 
void scr_loop_set_stream(bool (*pending)(void), void (*dispatch)(void));
typedef struct ScrDyn ScrDyn; 
void scr_lib_init(int argc, char **argv);
typedef struct ScrBytes ScrBytes; 
typedef struct ScrPromise ScrPromise; 
typedef struct ScrDyn ScrDyn;
typedef struct ScrBytes ScrBytes; 
typedef struct ScrClosure ScrClosure; 
struct ScrDyn {
  size_t rc; 
  ScrDynKind kind;
  bool buffer;
  bool null_proto;
  union {
    bool b;
    double num;
    ScrStr *str; 
    ScrBytes *bytes; 
    struct { size_t len; size_t cap; ScrDyn **items; } arr;      
    struct {
      size_t len;
      size_t cap;
      ScrDynEntry *entries;
      void *source_identity;
      ScrDyn *(*source_access)(void *, bool materialize);
    } obj; 
    struct { ScrClosure *clo; ScrDynThunk thunk; const char *sig; const char *name; uint32_t arity; } fn;
    struct { void *ptr; ScrDynHandleTag tag; } handle;
    struct {
      void *ptr;
      void *(*retain)(void *);
      void (*release)(void *);
      const char *type_key;
      size_t type_key_len;
      ScrDyn *(*materialize)(void *);
      void (*commit)(void *, const ScrDyn *);
      ScrDyn *materialized;
      ScrDynTypedCast *casts;
    } typed_ref;
    ScrPromise *promise;
    struct { ScrJsval *cell; } jsval;
  } v;
};
typedef struct ScrFiber ScrFiber;
ScrPromise *scr_async_spawn(void (*entry)(ScrFiber *, void *), void *argpack);
ScrPromise *scr_async_spawn_after(ScrPromise *dependency,
                                  void (*entry)(ScrFiber *, void *),
                                  void *argpack);
extern bool (*scr_urj_deliver_fn)(ScrPromise *p);
void scr_next_tick_raw(void (*fn)(void));
typedef struct ScrBytes ScrBytes; 
void scr_process_on_exit(ScrClosure *cb, void (*fn)(ScrClosure *, double), bool once);
void scr_stdin_on_data(ScrClosure *cb, void (*fn)(ScrClosure *, ScrBytes *), bool once);
void scr_rl_question(double id, const ScrStr *query, ScrClosure *cb ,
                      void (*fn)(ScrClosure *, ScrStr *));
void scr_loop_set_events(bool (*pending)(void), bool (*watching)(void),
                          void (*dispatch)(void), int (*pollfds)(int out[2]));
void scr_loop_set_io(bool (*pending)(void), void (*poll)(double max_wait_ms));
void scr_loop_set_island_rejections(bool (*fn)(bool print),
                                    int (*drain_jobs)(void));
void scr_loop_set_island_deadline(double (*fn)(void));
typedef struct ScrGen ScrGen;
ScrGen *scr_gen_new(void (*entry)(ScrFiber *, void *), void *argpack,
                    void (*drop_args)(void *));
ScrGen *scr_async_gen_new(void (*entry)(ScrFiber *, void *), void *argpack,
                          void (*drop_args)(void *),
                          void (*settle)(ScrGen *, ScrPromise *));
void scr_island_set_inflate(bool (*inflate)(const unsigned char *src, size_t src_len,
                                            unsigned char *dst, size_t dst_len));
typedef enum ScrBytesElem {
  SCR_BYTES_U8,  
  SCR_BYTES_U32, 
  SCR_BYTES_F32, 
  SCR_BYTES_I32, 
  SCR_BYTES_F64, 
} ScrBytesElem;
typedef struct ScrBytes {
  size_t rc;
  size_t len; 
  ScrBytesElem elem;
  uint8_t *data; 
  struct ScrBytes *backing;
} ScrBytes;
typedef struct ScrNetServer ScrNetServer;
typedef struct ScrNetSocket ScrNetSocket;
void scr_net_server_set_proto_settle(ScrNetServer *s, void (*fn)(void *));
void scr_net_set_dynh_http_on(bool (*fn)(ScrNetServer *, const char *, const ScrDyn *, bool));
void scr_net_sock_set_native_idle_checker(ScrNetSocket *s, bool (*fn)(void *));
void scr_net_set_proto_sweep(bool (*pending)(void), void (*sweep)(void));
void scr_loop_set_net(bool (*pending)(void), void (*dispatch)(void), int (*pollfd)(void));
void scr_loop_set_dgram(bool (*pending)(void), void (*dispatch)(void), int (*pollfd)(void));
void scr_loop_set_watch(bool (*pending)(void), void (*dispatch)(void), int (*pollfd)(void));